# odp-secure-services

./: AGENTS.md  CODEOWNERS  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: copilot-instructions.md
.husky/: pre-commit
aarch64-haf/: Cargo.toml
aarch64-haf/src/: lib.rs
dev-hooks/: Cargo.toml
dev-hooks/src/: lib.rs
ec-service-lib/: Cargo.toml
ec-service-lib/src/: lib.rs  service.rs
ec-service-lib/src/services/: battery.rs  ec_relay.rs  fw_mgmt.rs  mod.rs  notify.rs  thermal.rs  tpm.rs  tpm_sst.rs
embassy-aarch64-haf/src/: executor.rs
espi-device/: Cargo.toml
espi-device-stub/: Cargo.toml
espi-device-stub/src/: lib.rs
espi-device/src/: config_register.rs  lib.rs  status_register.rs
hafnium/: Cargo.toml
odp-ffa/src/: smc.rs
odp-ffa/src/function/: console.rs
odp-ffa/src/function/msg/: direct_message.rs
platform/ihv1-sp/: Cargo.toml  README.md
platform/ihv1-sp/src/: main.rs
platform/ihv1-sp/src/baremetal/: interrupt.rs
platform/ihv1-sp/src/services/: ec_memory.rs
platform/qemu-sp/: Cargo.toml
platform/qemu-sp/linker/: qemu-ec-sp.dts
platform/qemu-sp/src/: battery.rs  main.rs
qemu-sp-uart/: Cargo.toml  README.md
qemu-sp-uart/src/: lib.rs
sp-mctp-framer/: Cargo.toml  README.md
sp-mctp-framer/src/: lib.rs  tests.rs
supply-chain/: audits.toml  config.toml
